--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
 
 
 footer {
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: #f2f2f2;
     color: #333;
     text-align: center;
-    padding: 10px;
+    padding: 5px;
     line-height: 1;
 }
