--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,30 @@
-
-
+table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  /* Style table header */
+  th {
+    background-color: #f2f2f2;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  /* Style table cells */
+  td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  /* Add a solid border around table headers and cells */
+  th, td {
+    border: 1px solid black;
+  }
+  
+  /* Add alternate row color */
+  tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
 
 footer {
     position: relative;
