--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,18 @@ h1 {
   text-align: center;
 }
 
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+header p {
+  text-align: center;
+}
+
 nav {
   background-color: #797777;
   color: #211e1e;
@@ -26,6 +38,11 @@ nav a {
   margin-left: 10px; 
 }
 
+.center-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 body {
   background-color: salmon;
