--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,6 @@ li {
   list-style: none;
   font-family: 'Abril Fatface', cursive;
   font: 1.5rem;
-  
-
 }
 
 .left {
@@ -33,20 +31,39 @@ header p {
 }
 
 nav {
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   background-color: #797777;
   color: #211e1e;
-  display: flex;
-  justify-content: flex-end; 
-  height: auto;
-  margin-top: 0;
   line-height: 90px;
 }
 
+.nav-list {
+  display: flex;
+  margin-right: 2rem;
+}
+
+.nav-list a {
+  display: block;
+  font-size: 1.8rem;
+  padding: 1rem;
+  text-decoration: none
+}
+
+.nav-list a:hover {
+  background: salmon;
+  color: #211e1e;
+}
+
 nav img {
-  height: 90px;
-  width: 90px;
-  margin-left: auto;
-  margin-right: auto;
+  height: 100px;
+  width: 100px;
+  float: left;
+  border-radius: 50%;
 }
 
 nav a {
@@ -63,7 +80,17 @@ nav a {
 body {
   background-color: salmon;
   color: #008080;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.2rem; /* 18px */
 
+}
+
+.hero {
+  display: flex;
+  background-color: salmon;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 section {
