Added flex box styling

--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,15 @@ li {
 }
 
 .left {
-  float: left;
+  flex-basis: 60%;
 }
 
 .right {
-  float: right;
+  flex-basis: 35%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 header p {
@@ -32,14 +36,12 @@ header p {
 
 nav {
   display: flex;
-  justify-content: flex-end;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+  justify-content: space-between;
+  align-items: center;
   background-color: #797777;
   color: #211e1e;
-  line-height: 90px;
+  height: 90px;
+  padding: 0 2rem;
 }
 
 .nav-list {
@@ -60,8 +62,8 @@ nav {
 }
 
 nav img {
-  height: 100px;
-  width: 100px;
+  height: 85px;
+  width: 85px;
   float: left;
   border-radius: 50%;
 }
@@ -87,10 +89,10 @@ body {
 
 .hero {
   display: flex;
-  background-color: salmon;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: salmon;
 }
 
 section {
@@ -140,7 +142,35 @@ table {
     border: 1px solid black;
   }
   
-
+legend {
+  font-style: bold;
+  font-weight: 700;
+}
   #storeSales td:first-child {
     font-weight: bold;
+  }
+
+  .form-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
+  
+  .form-group label {
+    flex-basis: 40%;
+  }
+  
+  .form-group input {
+    flex-basis: 50%;
+    padding: 0.5rem;
+    border: none;
+    border-bottom: solid 2px #333;
+    background-color: #f2f2f2;
+    font-size: 1rem;
+  }
+  
+  #button {
+    margin-left: auto;
+    margin-right: 0;
   }
